--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-picker/picker": "^2.5.0",
